added movecomponent (sinwave, will remove later)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,10 @@
         "type_traits": "c",
         "utility": "c",
         "stdint.h": "c",
-        "ecs.h": "c"
+        "ecs.h": "c",
+        "string": "c",
+        "string_view": "c",
+        "components.h": "c"
     },
     "makefile.launchConfigurations": [
         {
